working on acquiring all BOLD signals and sub-cortical regions

--- a/example_data.ipynb
+++ b/example_data.ipynb
@@ -112,6 +112,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import nibabel as nib\n",
+    "from scipy.fft import fft, fftfreq\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -734,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -764,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -874,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4544,7 +4555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5392,10 +5403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import numpy as np\n",
     "import nibabel as nib\n",
     "from scipy.fft import fft, fftfreq\n",
@@ -5441,7 +5453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5536,13 +5548,6 @@
     "- [ ] evaluate level of stimulation to apply to achieve normal cognitive status\n",
     "- [ ] simulate applying stimulation to MCI or Demented to achieve Healthy Cognitive Function\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -5659,13 +5664,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -5674,10 +5672,204 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Func files without mask: ['data/sub-0270/ses-01/func/sub-0270_ses-01_task-rest_bold.nii', 'data/sub-0205/ses-01/func/sub-0205_ses-01_task-rest_bold.nii', 'data/sub-0231/ses-01/func/sub-0231_ses-01_task-rest_bold.nii', 'data/sub-0240/ses-01/func/sub-0240_ses-01_task-rest_bold.nii', 'data/sub-0238/ses-01/func/sub-0238_ses-01_task-rest_bold.nii', 'data/sub-0252/ses-01/func/sub-0252_ses-01_task-rest_bold.nii', 'data/sub-2132/ses-01/func/sub-2132_ses-01_task-rest_bold.nii', 'data/sub-2122/ses-01/func/sub-2122_ses-01_task-rest_bold.nii', 'data/sub-0272/ses-01/func/sub-0272_ses-01_task-rest_bold.nii', 'data/sub-2130/ses-01/func/sub-2130_ses-01_task-rest_bold.nii', 'data/sub-2145/ses-01/func/sub-2145_ses-01_task-rest_bold.nii', 'data/sub-0264/ses-01/func/sub-0264_ses-01_task-rest_bold.nii', 'data/sub-2134/ses-01/func/sub-2134_ses-01_task-rest_bold.nii', 'data/sub-0202/ses-01/func/sub-0202_ses-01_task-rest_bold.nii', 'data/sub-2141/ses-01/func/sub-2141_ses-01_task-rest_bold.nii', 'data/sub-0203/ses-01/func/sub-0203_ses-01_task-rest_bold.nii', 'data/sub-0222/ses-01/func/sub-0222_ses-01_task-rest_bold.nii', 'data/sub-0224/ses-01/func/sub-0224_ses-01_task-rest_bold.nii', 'data/sub-2128/ses-01/func/sub-2128_ses-01_task-rest_bold.nii', 'data/sub-0267/ses-01/func/sub-0267_ses-01_task-rest_bold.nii', 'data/sub-0206/ses-01/func/sub-0206_ses-01_task-rest_bold.nii', 'data/sub-0243/ses-01/func/sub-0243_ses-01_task-rest_bold.nii', 'data/sub-0230/ses-01/func/sub-0230_ses-01_task-rest_bold.nii', 'data/sub-0210/ses-01/func/sub-0210_ses-01_task-rest_bold.nii', 'data/sub-0207/ses-01/func/sub-0207_ses-01_task-rest_bold.nii', 'data/sub-2148/ses-01/func/sub-2148_ses-01_task-rest_bold.nii', 'data/sub-0212/ses-01/func/sub-0212_ses-01_task-rest_bold.nii', 'data/sub-0257/ses-01/func/sub-0257_ses-01_task-rest_bold.nii', 'data/sub-0213/ses-01/func/sub-0213_ses-01_task-rest_bold.nii', 'data/sub-0226/ses-01/func/sub-0226_ses-01_task-rest_bold.nii', 'data/sub-0214/ses-01/func/sub-0214_ses-01_task-rest_bold.nii', 'data/sub-0235/ses-01/func/sub-0235_ses-01_task-rest_bold.nii', 'data/sub-2125/ses-01/func/sub-2125_ses-01_task-rest_bold.nii', 'data/sub-2139/ses-01/func/sub-2139_ses-01_task-rest_bold.nii', 'data/sub-0265/ses-01/func/sub-0265_ses-01_task-rest_bold.nii', 'data/sub-0209/ses-01/func/sub-0209_ses-01_task-rest_bold.nii', 'data/sub-0247/ses-01/func/sub-0247_ses-01_task-rest_bold.nii', 'data/sub-2137/ses-01/func/sub-2137_ses-01_task-rest_bold.nii', 'data/sub-2131/ses-01/func/sub-2131_ses-01_task-rest_bold.nii', 'data/sub-0256/ses-01/func/sub-0256_ses-01_task-rest_bold.nii', 'data/sub-0246/ses-01/func/sub-0246_ses-01_task-rest_bold.nii', 'data/sub-0253/ses-01/func/sub-0253_ses-01_task-rest_bold.nii', 'data/sub-0232/ses-01/func/sub-0232_ses-01_task-rest_bold.nii', 'data/sub-0227/ses-01/func/sub-0227_ses-01_task-rest_bold.nii', 'data/sub-0242/ses-01/func/sub-0242_ses-01_task-rest_bold.nii', 'data/sub-0263/ses-01/func/sub-0263_ses-01_task-rest_bold.nii', 'data/sub-0237/ses-01/func/sub-0237_ses-01_task-rest_bold.nii', 'data/sub-2129/ses-01/func/sub-2129_ses-01_task-rest_bold.nii', 'data/sub-0249/ses-01/func/sub-0249_ses-01_task-rest_bold.nii', 'data/sub-2136/ses-01/func/sub-2136_ses-01_task-rest_bold.nii', 'data/sub-0234/ses-01/func/sub-0234_ses-01_task-rest_bold.nii', 'data/sub-2154/ses-01/func/sub-2154_ses-01_task-rest_bold.nii', 'data/sub-0250/ses-01/func/sub-0250_ses-01_task-rest_bold.nii', 'data/sub-0255/ses-01/func/sub-0255_ses-01_task-rest_bold.nii', 'data/sub-0233/ses-01/func/sub-0233_ses-01_task-rest_bold.nii', 'data/sub-0258/ses-01/func/sub-0258_ses-01_task-rest_bold.nii', 'data/sub-0204/ses-01/func/sub-0204_ses-01_task-rest_bold.nii', 'data/sub-2140/ses-01/func/sub-2140_ses-01_task-rest_bold.nii']\n",
+      "Anat files: ['data/sub-0270/ses-01/anat/sub-0270_ses-01_T1w.nii', 'data/sub-0205/ses-01/anat/sub-0205_ses-01_T1w.nii', 'data/sub-0231/ses-01/anat/sub-0231_ses-01_T1w.nii', 'data/sub-0240/ses-01/anat/sub-0240_ses-01_T1w.nii', 'data/sub-0238/ses-01/anat/sub-0238_ses-01_T1w.nii', 'data/sub-0252/ses-01/anat/sub-0252_ses-01_T1w.nii', 'data/sub-2132/ses-01/anat/sub-2132_ses-01_T1w.nii', 'data/sub-2122/ses-01/anat/sub-2122_ses-01_T1w.nii', 'data/sub-0272/ses-01/anat/sub-0272_ses-01_T1w.nii', 'data/sub-2130/ses-01/anat/sub-2130_ses-01_T1w.nii', 'data/sub-2145/ses-01/anat/sub-2145_ses-01_T1w.nii', 'data/sub-0264/ses-01/anat/sub-0264_ses-01_T1w.nii', 'data/sub-2134/ses-01/anat/sub-2134_ses-01_T1w.nii', 'data/sub-0202/ses-01/anat/sub-0202_ses-01_T1w.nii', 'data/sub-2141/ses-01/anat/sub-2141_ses-01_T1w.nii', 'data/sub-0203/ses-01/anat/sub-0203_ses-01_T1w.nii', 'data/sub-0222/ses-01/anat/sub-0222_ses-01_T1w.nii', 'data/sub-0224/ses-01/anat/sub-0224_ses-01_T1w.nii', 'data/sub-2128/ses-01/anat/sub-2128_ses-01_T1w.nii', 'data/sub-0267/ses-01/anat/sub-0267_ses-01_T1w.nii', 'data/sub-0206/ses-01/anat/sub-0206_ses-01_T1w.nii', 'data/sub-0243/ses-01/anat/sub-0243_ses-01_T1w.nii', 'data/sub-0230/ses-01/anat/sub-0230_ses-01_T1w.nii', 'data/sub-0210/ses-01/anat/sub-0210_ses-01_T1w.nii', 'data/sub-0207/ses-01/anat/sub-0207_ses-01_T1w.nii', 'data/sub-2148/ses-01/anat/sub-2148_ses-01_T1w.nii', 'data/sub-0212/ses-01/anat/sub-0212_ses-01_T1w.nii', 'data/sub-0257/ses-01/anat/sub-0257_ses-01_T1w.nii', 'data/sub-0213/ses-01/anat/sub-0213_ses-01_T1w.nii', 'data/sub-0226/ses-01/anat/sub-0226_ses-01_T1w.nii', 'data/sub-0214/ses-01/anat/sub-0214_ses-01_T1w.nii', 'data/sub-0235/ses-01/anat/sub-0235_ses-01_T1w.nii', 'data/sub-2125/ses-01/anat/sub-2125_ses-01_T1w.nii', 'data/sub-2139/ses-01/anat/sub-2139_ses-01_T1w.nii', 'data/sub-0265/ses-01/anat/sub-0265_ses-01_T1w.nii', 'data/sub-0209/ses-01/anat/sub-0209_ses-01_T1w.nii', 'data/sub-0247/ses-01/anat/sub-0247_ses-01_T1w.nii', 'data/sub-2137/ses-01/anat/sub-2137_ses-01_T1w.nii', 'data/sub-2131/ses-01/anat/sub-2131_ses-01_T1w.nii', 'data/sub-0256/ses-01/anat/sub-0256_ses-01_T1w.nii', 'data/sub-0246/ses-01/anat/sub-0246_ses-01_T1w.nii', 'data/sub-0253/ses-01/anat/sub-0253_ses-01_T1w.nii', 'data/sub-0232/ses-01/anat/sub-0232_ses-01_T1w.nii', 'data/sub-0227/ses-01/anat/sub-0227_ses-01_T1w.nii', 'data/sub-0242/ses-01/anat/sub-0242_ses-01_T1w.nii', 'data/sub-0263/ses-01/anat/sub-0263_ses-01_T1w.nii', 'data/sub-0237/ses-01/anat/sub-0237_ses-01_T1w.nii', 'data/sub-2129/ses-01/anat/sub-2129_ses-01_T1w.nii', 'data/sub-0249/ses-01/anat/sub-0249_ses-01_T1w.nii', 'data/sub-2136/ses-01/anat/sub-2136_ses-01_T1w.nii', 'data/sub-0234/ses-01/anat/sub-0234_ses-01_T1w.nii', 'data/sub-2154/ses-01/anat/sub-2154_ses-01_T1w.nii', 'data/sub-0250/ses-01/anat/sub-0250_ses-01_T1w.nii', 'data/sub-0255/ses-01/anat/sub-0255_ses-01_T1w.nii', 'data/sub-0233/ses-01/anat/sub-0233_ses-01_T1w.nii', 'data/sub-0258/ses-01/anat/sub-0258_ses-01_T1w.nii', 'data/sub-0204/ses-01/anat/sub-0204_ses-01_T1w.nii', 'data/sub-2140/ses-01/anat/sub-2140_ses-01_T1w.nii']\n",
+      "Func mask files: ['data/sub-0270/ses-01/func/sub-0270_brain_mask.nii']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Root directory is 'data'\n",
+    "root_dir = 'data'\n",
+    "\n",
+    "# Glob all files that end in .nii under any 'func' directory (in nested subfolders)\n",
+    "func_files = glob.glob(os.path.join(root_dir, '**', 'func', '**', '*.nii'), recursive=True)\n",
+    "\n",
+    "# Filter out files that contain the word 'mask' from the func_files list\n",
+    "func_files_without_mask = [file for file in func_files if 'mask' not in file]\n",
+    "\n",
+    "# Glob all files that end in .nii under any 'anat' directory (in nested subfolders)\n",
+    "anat_files = glob.glob(os.path.join(root_dir, '**', 'anat', '**', '*.nii'), recursive=True)\n",
+    "\n",
+    "# Glob all files that contain the word \"mask\" that end in .nii and are located under any 'func' directory (in nested subfolders)\n",
+    "func_mask_files = glob.glob(os.path.join(root_dir, '**', 'func', '**', '*mask*.nii'), recursive=True)\n",
+    "\n",
+    "# Output the results\n",
+    "print(\"Func files without mask:\", func_files_without_mask)\n",
+    "print(\"Anat files:\", anat_files)\n",
+    "print(\"Func mask files:\", func_mask_files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the 4D fMRI data and 3D anatomical data for each brain\n",
+    "brains_fmri = func_files_without_mask\n",
+    "brains_anatomical = anat_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Background',\n",
+       " 'Frontal Pole',\n",
+       " 'Insular Cortex',\n",
+       " 'Superior Frontal Gyrus',\n",
+       " 'Middle Frontal Gyrus',\n",
+       " 'Inferior Frontal Gyrus, pars triangularis',\n",
+       " 'Inferior Frontal Gyrus, pars opercularis',\n",
+       " 'Precentral Gyrus',\n",
+       " 'Temporal Pole',\n",
+       " 'Superior Temporal Gyrus, anterior division',\n",
+       " 'Superior Temporal Gyrus, posterior division',\n",
+       " 'Middle Temporal Gyrus, anterior division',\n",
+       " 'Middle Temporal Gyrus, posterior division',\n",
+       " 'Middle Temporal Gyrus, temporooccipital part',\n",
+       " 'Inferior Temporal Gyrus, anterior division',\n",
+       " 'Inferior Temporal Gyrus, posterior division',\n",
+       " 'Inferior Temporal Gyrus, temporooccipital part',\n",
+       " 'Postcentral Gyrus',\n",
+       " 'Superior Parietal Lobule',\n",
+       " 'Supramarginal Gyrus, anterior division',\n",
+       " 'Supramarginal Gyrus, posterior division',\n",
+       " 'Angular Gyrus',\n",
+       " 'Lateral Occipital Cortex, superior division',\n",
+       " 'Lateral Occipital Cortex, inferior division',\n",
+       " 'Intracalcarine Cortex',\n",
+       " 'Frontal Medial Cortex',\n",
+       " 'Juxtapositional Lobule Cortex (formerly Supplementary Motor Cortex)',\n",
+       " 'Subcallosal Cortex',\n",
+       " 'Paracingulate Gyrus',\n",
+       " 'Cingulate Gyrus, anterior division',\n",
+       " 'Cingulate Gyrus, posterior division',\n",
+       " 'Precuneous Cortex',\n",
+       " 'Cuneal Cortex',\n",
+       " 'Frontal Orbital Cortex',\n",
+       " 'Parahippocampal Gyrus, anterior division',\n",
+       " 'Parahippocampal Gyrus, posterior division',\n",
+       " 'Lingual Gyrus',\n",
+       " 'Temporal Fusiform Cortex, anterior division',\n",
+       " 'Temporal Fusiform Cortex, posterior division',\n",
+       " 'Temporal Occipital Fusiform Cortex',\n",
+       " 'Occipital Fusiform Gyrus',\n",
+       " 'Frontal Opercular Cortex',\n",
+       " 'Central Opercular Cortex',\n",
+       " 'Parietal Opercular Cortex',\n",
+       " 'Planum Polare',\n",
+       " \"Heschl's Gyrus (includes H1 and H2)\",\n",
+       " 'Planum Temporale',\n",
+       " 'Supracalcarine Cortex',\n",
+       " 'Occipital Pole']"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "atlas.labels\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Example: Load the first brain's fMRI and anatomical data\n",
+    "fmri_data, fmri_affine = load_nii(brains_fmri[0])  # Shape: (x, y, z, t)\n",
+    "anatomical_data, anatomical_affine = load_nii(brains_anatomical[0])  # Shape: (x, y, z)\n",
+    "anatomical_nii = nib.load(brains_anatomical[0])\n",
+    "\n",
+    "# Fetch the atlas (cortical or subcortical)\n",
+    "atlas = fetch_atlas_harvard_oxford('cort-maxprob-thr25-1mm')  # 1mm resolution\n",
+    "atlas_img = atlas.maps\n",
+    "\n",
+    "# Resample the atlas to match the anatomical image\n",
+    "resampled_atlas = resample_to_img(atlas_img, anatomical_nii , interpolation='nearest')\n",
+    "\n",
+    "# Save the new resampled atlas\n",
+    "resampled_atlas.to_filename(\"registered_atlas.nii.gz\")\n",
+    "\n",
+    "# Convert the resampled atlas image to a NumPy array\n",
+    "atlas_data = resampled_atlas.get_fdata()\n",
+    "\n",
+    "# Extract unique region labels from the atlas\n",
+    "roi_labels = np.unique(atlas_data)[1:]  # Ignore background (0)\n",
+    "\n",
+    "# Step 1: Resample the atlas to match the spatial dimensions of fmri_data (64, 64, 34)\n",
+    "# Determine the scaling factors for each spatial dimension\n",
+    "scaling_factors = np.array(fmri_data.shape[:3]) / np.array(atlas_data.shape)\n",
+    "\n",
+    "# Resample the atlas using the scaling factors (linear interpolation)\n",
+    "resampled_atlas = zoom(atlas_data, scaling_factors, order=1)  # Using linear interpolation\n",
+    "\n",
+    "# Round and cast the resampled atlas to integers\n",
+    "resampled_atlas = np.round(resampled_atlas).astype(int)\n",
+    "\n",
+    "# Step 2: Extract unique region labels from the resampled atlas (skip background 0)\n",
+    "roi_labels = np.unique(resampled_atlas)[np.unique(resampled_atlas) > 0]\n",
+    "\n",
+    "# Create a dictionary to store extracted time series for each ROI\n",
+    "roi_time_series = {}\n",
+    "\n",
+    "# Step 3: Extract fMRI time series for each ROI\n",
+    "for roi in tqdm(roi_labels, desc=\"Processing ROIs\"):\n",
+    "    # Get the voxel indices for the current ROI in the resampled atlas\n",
+    "    roi_voxels = np.where(resampled_atlas == roi)\n",
+    "\n",
+    "    # Ensure the voxel indices are valid within the spatial dimensions of fmri_data\n",
+    "    # Extract the fMRI signal corresponding to these voxels for each time point\n",
+    "    roi_signal = fmri_data[roi_voxels].mean(axis=0)  # Averaging across voxels (axis 0 refers to spatial)\n",
+    "\n",
+    "    # Store the resulting time series for the current ROI\n",
+    "    roi_time_series[roi] = roi_signal\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "roi_df = pd.DataFrame(roi_time_series)\n",
+    "\n",
+    "# Save as CSV\n",
+    "roi_df.to_csv(\"roi_activity.csv\", index=False)\n",
+    "\n",
+    "\n",
+    "# Parameters\n",
+    "TR = 2 # Repetition time (in seconds)\n",
+    "low_freq_band = (0.01, 0.1) # Low-frequency range for ALFF (Hz)\n",
+    "n_timepoints = roi_df.shape[0]\n",
+    "frequencies = fftfreq(n_timepoints, d=TR)\n",
+    "fft_data = fft(roi_df.iloc[:, index], axis=-1)\n",
+    "\n",
+    "# Create a mask for the low-frequency band\n",
+    "low_freq_mask = np.logical_and(frequencies >= low_freq_band[0], frequencies <= low_freq_band[1])\n",
+    "\n",
+    "# Compute the ALFF: average amplitude in the low-frequency band\n",
+    "alff = np.abs(fft_data)[..., low_freq_mask].mean(axis=-1)\n",
+    "\n",
+    "# For fALFF: Compute the total power in the 0.01-0.25 Hz range\n",
+    "total_power = np.abs(fft_data)[..., (frequencies >= 0.01) & (frequencies <= 0.25)].sum(axis=-1)\n",
+    "\n",
+    "# Compute fALFF: Normalized ALFF\n",
+    "falff = alff / total_power\n",
+    "\n",
+    "# BOLD Signal Variability (e.g., using Coefficient of Variation)\n",
+    "cv = np.std(roi_df.iloc[:, index]) / np.mean(roi_df.iloc[:, index])"
+   ]
   },
   {
    "cell_type": "markdown",
