saving participant df

--- a/notebooks/cluster_analysis.ipynb
+++ b/notebooks/cluster_analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,19 +69,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load fALFF, CV, & subject names\n",
     "fALFF_df = pd.read_csv(df_dir + \"fALFF.csv\", index_col=0)\n",
     "cv_df = pd.read_csv(df_dir + \"cv_df.csv\", index_col=0)\n",
-    "subject_name_df = pd.read_csv(df_dir + \"subject_name_df.csv\")"
+    "participant_df = pd.read_csv(df_dir + \"participants.tsv\", sep=\"\\t\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>participant_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>handedness</th>\n",
+       "      <th>years_of_education</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>sub-0202</td>\n",
+       "      <td>76.9260273972603</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3 Right</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>sub-0203</td>\n",
+       "      <td>73.3257654016019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2 Left</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>sub-0204</td>\n",
+       "      <td>55.0602739726027</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3 Right</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>sub-0205</td>\n",
+       "      <td>77.43231529306091</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3 Right</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>sub-0206</td>\n",
+       "      <td>72.0191780821918</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3 Right</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  participant_id                age  sex handedness  years_of_education\n",
+       "0       sub-0202   76.9260273972603    1    3 Right                  16\n",
+       "1       sub-0203   73.3257654016019    1     2 Left                  12\n",
+       "2       sub-0204   55.0602739726027    1    3 Right                  14\n",
+       "3       sub-0205  77.43231529306091    1    3 Right                  16\n",
+       "4       sub-0206   72.0191780821918    1    3 Right                  12"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "participant_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +450,7 @@
        "[5 rows x 69 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +734,7 @@
        "[5 rows x 69 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -710,7 +806,7 @@
        "4  sub-0238"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +826,7 @@
        "58"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +1070,7 @@
        "[5 rows x 69 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
