clustered using kmeans and dbscan of fALFF and CV of the BOLD signals to identify healthy, mci, or dementia of subjects

--- a/notebooks/visualizing_BOLD_activity.ipynb
+++ b/notebooks/visualizing_BOLD_activity.ipynb
@@ -2,7 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "import matplotlib.colors as mcolors\n",
+    "import matplotlib.cm as cm\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +33,12 @@
     "\n",
     "fALFF_df = pd.read_csv(df_dir + \"fALFF.csv\", index_col=0)\n",
     "cv_df = pd.read_csv(df_dir + \"cv_df.csv\", index_col=0)\n",
-    "subject_name_df = pd.read_csv(df_dir + \"subject_name_df.csv\")"
+    "# subject_name_df = pd.read_csv(df_dir + \"subject_name_df.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -4065,7 +4079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4122,7 +4136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
