the largest silhouette score is associated with tmt-b

--- a/notebooks/cluster_analysis.ipynb
+++ b/notebooks/cluster_analysis.ipynb
@@ -2956,16 +2956,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
+    "kmeans.fit(p_imputed_df[\"global\"].values.reshape(-1,1))\n",
     "kmeans_global_labels = kmeans.labels_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2974,7 +2975,7 @@
        "0.5750037250344353"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2985,24 +2986,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 2, 0, 0, 2, 0, 2, 0, 2, 0, 2, 0, 2, 0, 2, 0, 0, 0, 0, 0, 0,\n",
-       "       2, 0, 2, 0, 0, 2, 0, 2, 0, 2, 0, 2, 0, 2, 2, 0, 2, 2, 2, 0, 2, 0,\n",
-       "       2, 2, 0, 1, 0, 0, 2, 0, 2, 1, 1, 1, 2, 1], dtype=int32)"
+       "Index(['participant_id', 'age', 'sex', 'handedness', 'years_of_education',\n",
+       "       'attention', 'executive', 'global', 'language', 'memory',\n",
+       "       'visuospatial', 'moca_total', 'drs', 'tmt_a', 'tmt_b', 'bta',\n",
+       "       'sdmt_oral', 'bnt', 'cvlt15', 'cvlt_ld_tot', 'fas', 'jlo'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "kmeans.labels_"
+    "p_imputed_df.columns"
    ]
   },
   {
@@ -3039,6 +3042,29 @@
     "X_pca_tsne = tsne.fit_transform(cv_fALFF_imputed_df.loc[:, [\"Substantia Nigra Left fALFF\", \"Substantia Nigra Right fALFF\"]])\n",
     "plt.scatter(X_pca_tsne[:, 0], X_pca_tsne[:, 1], c=kmeans_global_labels, cmap='viridis')\n",
     "silhouette_score(cv_fALFF_imputed_df.loc[:, [\"Substantia Nigra Left fALFF\", \"Substantia Nigra Right fALFF\"]], kmeans_global_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6339389179108058"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature = \"tmt_b\"\n",
+    "kmeans.fit(p_imputed_df[feature].values.reshape(-1,1))\n",
+    "kmeans.labels_\n",
+    "silhouette_score(p_imputed_df[feature].values.reshape(-1,1), kmeans.labels_)"
    ]
   }
  ],
