--- a/notebooks/cluster_analysis.ipynb
+++ b/notebooks/cluster_analysis.ipynb
@@ -3708,6 +3708,20 @@
    "source": [
     "# pd.read_csv(\"../data/dataframes/fALFF_SN_scaled_means_cluster_key_index.csv\", index_col=0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- [ ] Create a connectivity Graph "
+   ]
   }
  ],
  "metadata": {
