visualizing network data

--- a/notebooks/_initial_analysis_collecting_and_calculating_dataframes.ipynb
+++ b/notebooks/_initial_analysis_collecting_and_calculating_dataframes.ipynb
@@ -666,74 +666,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Sample Bipartite Graph Between Brains and Regions with Multiple Metrics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "brain_nodes = [\"Brain_1\", \"Brain_2\"]\n",
-    "region_nodes = [\"Hippocampus\", \"Cortex\"]\n",
-    "\n",
-    "# Create a bipartite graph (simple graph)\n",
-    "B = nx.Graph()\n",
-    "\n",
-    "# Add nodes for brains and regions\n",
-    "B.add_nodes_from(brain_nodes, bipartite=0)\n",
-    "B.add_nodes_from(region_nodes, bipartite=1)\n",
-    "\n",
-    "# Add a single edge between \"Brain_1\" and \"Hippocampus\" with multiple attributes\n",
-    "B.add_edge(\"Brain_1\", \"Hippocampus\", mean_weight=0.8, variability_weight=0.15)\n",
-    "\n",
-    "# Print out the edge and its attributes\n",
-    "for u, v, data in B.edges(data=True):\n",
-    "    print(f\"Edge between {u} and {v}: {data}\")\n",
-    "import matplotlib.pyplot as plt\n",
-    "import networkx as nx\n",
-    "\n",
-    "# Define nodes and the bipartite graph structure\n",
-    "brain_nodes = [\"Brain_1\", \"Brain_2\"]\n",
-    "region_nodes = [\"Hippocampus\", \"Cortex\"]\n",
-    "\n",
-    "# Create a bipartite graph (simple graph)\n",
-    "B = nx.Graph()\n",
-    "\n",
-    "# Add nodes for brains and regions\n",
-    "B.add_nodes_from(brain_nodes, bipartite=0)\n",
-    "B.add_nodes_from(region_nodes, bipartite=1)\n",
-    "\n",
-    "# Add a single edge between \"Brain_1\" and \"Hippocampus\" with multiple attributes\n",
-    "B.add_edge(\"Brain_1\", \"Hippocampus\", mean_weight=0.8, variability_weight=0.15)\n",
-    "\n",
-    "# Set up position for bipartite layout\n",
-    "pos = {}\n",
-    "pos.update((node, (1, index)) for index, node in enumerate(brain_nodes))  # Position for brain nodes\n",
-    "pos.update((node, (2, index)) for index, node in enumerate(region_nodes))  # Position for region nodes\n",
-    "\n",
-    "# Draw the graph with labels and attributes\n",
-    "plt.figure(figsize=(8, 6))\n",
-    "\n",
-    "# Draw the nodes and edges\n",
-    "nx.draw(B, pos, with_labels=True, node_color='skyblue', node_size=2000, font_size=12, font_weight='bold', edge_color='gray')\n",
-    "\n",
-    "# Display edge labels (mean_weight, variability_weight)\n",
-    "edge_labels = {(u, v): f\"Mean: {data['mean_weight']}, Variability: {data['variability_weight']}\" \n",
-    "               for u, v, data in B.edges(data=True)}\n",
-    "nx.draw_networkx_edge_labels(B, pos, edge_labels=edge_labels, font_size=10)\n",
-    "\n",
-    "# Show the plot\n",
-    "plt.title(\"Bipartite Graph of Brain Regions and Nodes with Attributes\")\n",
-    "plt.axis(\"off\")\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Calculating the ALFF/fALFF and the Bold Variability"
    ]
   },
@@ -926,13 +858,6 @@
    "source": [
     "len(brains_fmri)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1148,7 +1073,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_df.clumns"
+    "temp_df.columns"
    ]
   },
   {
