saving plot of 3D brain & network graphs

--- a/notebooks/cluster_analysis.ipynb
+++ b/notebooks/cluster_analysis.ipynb
@@ -6753,6 +6753,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 453,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NodeView(('Frontal Pole', 'Middle Frontal Gyrus', 'Superior Temporal Gyrus, posterior division', 'Middle Temporal Gyrus, anterior division', 'Middle Temporal Gyrus, posterior division', 'Supramarginal Gyrus, anterior division', 'Supramarginal Gyrus, posterior division', 'Angular Gyrus', 'Frontal Opercular Cortex', 'Supracalcarine Cortex', 'Left Accumbens', 'Substantia Nigra Right', 'Left Caudate'))"
+      ]
+     },
+     "execution_count": 453,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cognitively_normal_stat_sign_corr_graph.nodes"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 452,
    "metadata": {},
    "outputs": [
@@ -6796,6 +6816,34 @@
     "plt.title(\"Network of Correlations with Substantia Nigra Right in Cognitively Normal Patients\")\n",
     "plt.axis('off')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 454,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/linux-pc/anaconda3/envs/torch/lib/python3.10/site-packages/networkx/readwrite/json_graph/node_link.py:142: FutureWarning: \n",
+      "The default value will be `edges=\"edges\" in NetworkX 3.6.\n",
+      "\n",
+      "To make this warning go away, explicitly set the edges kwarg, e.g.:\n",
+      "\n",
+      "  nx.node_link_data(G, edges=\"links\") to preserve current behavior, or\n",
+      "  nx.node_link_data(G, edges=\"edges\") for forward compatibility.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "data = nx.node_link_data(cognitively_normal_stat_sign_corr_graph)  # Convert to a dictionary\n",
+    "with open(\"../data/graphs/cognitively_normal_pdd_stat_sign_corr_graph.json\", \"w\") as f:\n",
+    "    json.dump(data, f, indent=4)\n"
    ]
   },
   {
